<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Create_producto">



    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton5"
        android:layout_margin="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:clickable="true"



        app:srcCompat="@drawable/okay"
        android:onClick="btnCreatePressed"

        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingVertical="20dp"
        android:paddingHorizontal="24dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginVertical="10dp"
            >

            <TextView
                android:id="@+id/textView2"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:hint="@string/addDescripcionPlaceholder"

                android:textSize="12sp" />

            <EditText
                android:id="@+id/etAddDescripcion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_gravity="center"


                android:layout_weight="1"

                android:hint="@string/addDescripcionPlaceholder"
                android:inputType="text"
                android:textColorHint="@color/colorPrimary"
                android:textSize="12sp"
                android:fontFamily="@font/aref_ruqaa"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginVertical="10dp">

            <TextView
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:hint="@string/addCategoriaPlaceholder"

                android:textSize="12sp" />

            <EditText
                android:id="@+id/etAddCategoria"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/aref_ruqaa"

                android:layout_weight="1"
                android:hint="@string/addCategoriaPlaceholder"
                android:inputType="text"
                android:textColorHint="@color/colorPrimary"
                android:textSize="12sp" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginVertical="10dp">

            <TextView
                android:hint="@string/addPrecioUnitarioPlaceholder"
                android:layout_gravity="center"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"

                android:textSize="12sp" />

            <EditText
                android:id="@+id/etAddPrecio_unitario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"

                android:fontFamily="@font/aref_ruqaa"
                android:hint="@string/addPrecioUnitarioPlaceholder"
                android:inputType="numberDecimal"
                android:textColorHint="@color/colorPrimary"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:hint="@string/addExistenciaPlaceholder"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/etAddExistencia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"

                android:fontFamily="@font/aref_ruqaa"
                android:hint="@string/addExistenciaPlaceholder"
                android:inputType="number"
                android:textColorHint="@color/colorPrimary"
                android:textSize="12sp" />
        </LinearLayout>











    </LinearLayout>




</androidx.coordinatorlayout.widget.CoordinatorLayout>